--- a/modules/server/src/main/resources/templates/node/manage/filemanage.html
+++ b/modules/server/src/main/resources/templates/node/manage/filemanage.html
@@ -146,20 +146,7 @@
                     listUploadCount++;
                 });
             },
-            before: function (obj) {
-                setTimeout(function () {
-                    layer.msg('上传中(' + nowUploadCount + '/' + listUploadCount + ')', {
-                        icon: 16,
-                        shade: 0.2,
-                        time: 100000000
-                    });
-                }, 200);
-                updateFail = false;
-            },
             allDone: function (obj) {
-                setTimeout(function () {
-                    layer.closeAll();
-                }, 1000);
                 if (updateFail) {
                     return;
                 }
@@ -169,24 +156,14 @@
                 }, 2000);
             },
             done: function (res, index, upload) {
-                if (res.code != 200) {
+                if (res.code !== 200) {
                     layer.msg(res.msg);
                 } else {
-                    nowUploadCount++
-                    layer.msg('上传中(' + nowUploadCount + '/' + listUploadCount + ')', {
-                        icon: 16,
-                        shade: 0.2,
-                        time: 100000000
-                    });
                 }
                 // 没有权限
-                if (res.code == 302) {
+                if (res.code === 302) {
                     updateFail = true;
                 }
-            },
-            error: function () {
-                layer.closeAll();
-                layer.msg('上传失败');
             }
         });
         $("#uploadFile_Import").click(function () {
