--- a/modules/server/src/main/resources/templates/node/tomcat/manage.html
+++ b/modules/server/src/main/resources/templates/node/tomcat/manage.html
@@ -144,7 +144,6 @@
 
         //
         var updateFail = false;
-        var listUploadCount, nowUploadCount;
         uploadRender({
             elem: '#uploadFile',
             accept: 'file',
@@ -155,53 +154,28 @@
             multiple: true,
             url: './upload',
             choose: function (obj) {
-                nowUploadCount = listUploadCount = 0;
-                obj.preview(function (index, file, result) {
-                    listUploadCount++;
-                });
             },
             before: function (obj) {
                 this.data.path = currentNode.path;
-                setTimeout(function () {
-                    layer.msg('上传中(' + nowUploadCount + '/' + listUploadCount + ')', {
-                        icon: 16,
-                        shade: 0.2,
-                        time: 100000000
-                    });
-                }, 200);
                 updateFail = false;
             },
             allDone: function (obj) {
-                setTimeout(function () {
-                    layer.closeAll();
-                }, 1000);
                 if (updateFail) {
                     return;
                 }
-                layer.msg("文件总数：" + obj.total + " 成功上传：" + nowUploadCount + " 上传失败：" + obj.aborted);
+                layer.msg("文件总数：" + obj.total + "上传失败：" + obj.aborted);
                 setTimeout(function () {
                     reloadTable();
                 }, 2000);
             },
             done: function (res, index, upload) {
-                if (res.code != 200) {
+                if (res.code !== 200) {
                     layer.msg(res.msg);
-                } else {
-                    nowUploadCount++
-                    layer.msg('上传中(' + nowUploadCount + '/' + listUploadCount + ')', {
-                        icon: 16,
-                        shade: 0.2,
-                        time: 100000000
-                    });
                 }
                 // 没有权限
-                if (res.code == 302) {
+                if (res.code === 302) {
                     updateFail = true;
                 }
-            },
-            error: function () {
-                layer.closeAll();
-                layer.msg('上传失败');
             }
         });
 
