上传文件进度

--- a/modules/server/src/main/resources/templates/common/head.html
+++ b/modules/server/src/main/resources/templates/common/head.html
@@ -305,7 +305,7 @@
                 let allDone = data.allDone;
                 delete data.done;
                 delete data.allDone;
-
+                // 打开层级
                 var useLayer = data.openTop ? top.layer : layer;
                 const defData = {
                     data: newsData,
