--- a/modules/server/src/main/resources/templates/system/update.html
+++ b/modules/server/src/main/resources/templates/system/update.html
@@ -50,6 +50,7 @@
             url: './uploadJar.json',
             data: {},
             exts: 'jar',
+            openTop: true,
             acceptMime: '.jar',
             done: function (res) {
                 top.layer.closeAll('loading');
