脚本模板跟随系统编码

--- a/modules/server/src/main/resources/templates/node/script/console.html
+++ b/modules/server/src/main/resources/templates/node/script/console.html
@@ -204,11 +204,11 @@
 
         function scrollToBotomm() {
             var h = showLogDom[0].scrollHeight;
-            if (window.screen.height * 2 < h) {
-                showLogDom.html("已清空屏幕缓存" + '<br/>');
-                showLogDom.scrollTop(0);
-                return;
-            }
+            // if (window.screen.height * 2 < h) {
+            //     showLogDom.html("已清空屏幕缓存" + '<br/>');
+            //     showLogDom.scrollTop(0);
+            //     return;
+            // }
             showLogDom.scrollTop(h);
         }
 
