--- a/modules/server/src/main/resources/templates/node/welcome.html
+++ b/modules/server/src/main/resources/templates/node/welcome.html
@@ -18,20 +18,15 @@
             height: 400px;
         }
 
-        .tool {
-            right: 3%;
-            position: absolute;
-            z-index: 999;
-        }
-
         .choose {
             color: #009688;
             border: 1px #009688 solid !important;
         }
 
-        .range {
-            padding: 5px;
-            border: 1px #ffffff solid;
+        .export {
+            position: absolute;
+            right: 3%;
+            z-index: 990;
         }
 
     </style>
@@ -40,17 +35,16 @@
 
 <body>
 <div style="position: relative">
-    <div class="tool">
-        <span class="range choose" id="minuteData" title="查看30分钟内监控数据">30分钟</span>
-        <span class="range" id="hourData" title="查看24小时内监控数据">24小时</span>
-        <i class="layui-icon layui-icon-export" id="exportData" title="导出24小时内监控数据" style="font-size: 18px"></i>
+    <div class="export">
+        <div id="exportData" style="color: #FFFFFF;width: 1px;height: 1px"></div>
+        <button class="layui-icon  layui-icon-export" id="exportBtn" title="导出监控数据" style="font-size: 18px"></button>
     </div>
     <div class="echarts" id="echarts"></div>
 </div>
 <table class="layui-table" id="tab_monitor" lay-filter="tab_monitor" style="margin-top:10px"></table>
 </body>
 <script type="application/javascript">
-    var myEcharts;
+    var ws, myEcharts, maxSize = 12;
     var col = [{field: 'pid', title: '进程id', sort: true, width: '6%'},
         {field: 'command', title: '进程名称'},
         {field: 'port', title: '端口', sort: true, width: '6%'},
@@ -80,29 +74,23 @@
         //
         tableRender(config);
 
-        //12分钟
-        $("#minuteData").on("click", function () {
-            $("#hourData").removeClass("choose");
-            $("#minuteData").addClass("choose");
-            loadTop();
-        });
+        layui.use(['laydate'], function () {
+            var laydate = layui.laydate;
 
-        //24小时
-        $("#hourData").on("click", function () {
-            $("#minuteData").removeClass("choose");
-            $("#hourData").addClass("choose");
-            loadTop();
-        });
-
-        //导出
-        $("#exportData").on("click", function () {
-            var bool = $("#hourData").hasClass("choose");
-            let type = 'minute';
-            if (bool) {
-                type = 'hour';
-            }
-            let nodeId = getTopQueryString("nodeId");
-            self.location.href = './exportTop?nodeId=' + nodeId + '&type=' + type;
+            laydate.render({
+                elem: '#exportData',
+                type: 'datetime',
+                eventElem: '#exportBtn',
+                range: '~',
+                max: 0,
+                show: false,
+                done: function (value, date, endDate) {
+                    if (value) {
+                        let nodeId = getTopQueryString("nodeId");
+                        self.location.href = './exportTop?nodeId=' + nodeId + '&time=' + value;
+                    }
+                }
+            });
         });
     }
 
@@ -119,7 +107,10 @@
             },
             success: function (data) {
                 if (200 === data.code && data.data) {
+                    maxSize = data.data.maxSize;
                     loadEchartsData(data.data);
+                    //打开socket
+                    linkSocket(true);
                 }
             }
         });
@@ -163,6 +154,83 @@
         }
         let array = [cpuItem, memoryItem, diskItem];
         loadEcharts(data.scales, array);
+    }
+
+    //拼接监控数据
+    function addTopData(topData) {
+        var bool = $("#hourData").hasClass("choose");
+        if (bool && !topData.hourTop) {
+            return;
+        }
+        let option = myEcharts.getOption();
+        let series = option.series;
+        let xAxis = option.xAxis;
+        let xAxisData = xAxis[0].data;
+
+        let cpuItem = series[0];
+        let memoryItem = series[1];
+        let diskItem = series[2];
+        cpuItem.data.push(parseFloat(topData.cpu));
+        diskItem.data.push(parseFloat(topData.disk));
+        memoryItem.data.push(parseFloat(topData.memory));
+        //删除过时数据
+        if (cpuItem.data.length > maxSize) {
+            cpuItem.data.splice(0, 1);
+            diskItem.data.splice(0, 1);
+            memoryItem.data.splice(0, 1);
+            xAxisData.splice(0, 1);
+        }
+        if (diskItem.data[0] === 0) {
+            cpuItem.data.splice(0, 1);
+            diskItem.data.splice(0, 1);
+            memoryItem.data.splice(0, 1);
+        }
+        if (cpuItem.data.length > xAxisData.length) {
+            xAxisData.push(topData.time);
+        }
+        let newSeries = [cpuItem, memoryItem, diskItem];
+        loadEcharts(xAxisData, newSeries);
+    }
+
+    function linkSocket(status) {
+        if (!('WebSocket' in window)) {
+            layer.msg("不支持WebSocket");
+            return;
+        }
+        var url = getSocketHost() + "/console?userId=[[${session.user.getUserMd5Key()}]]&projectId=system&nodeId=[[${node.id}]]&type=console";
+        if (!ws) {
+            ws = new WebSocket(url);
+        }
+        if (status) {
+            if (ws.readyState !== 1 && ws.readyState !== 0) {
+                ws = new WebSocket(url);
+            }
+            ws.onopen = function () {
+                ws.send('{"op": "top", "projectInfo":{}}');
+            };
+            ws.onmessage = function (data) {
+                try {
+                    if (data.data) {
+                        var top = JSON.parse(data.data);
+                        if (top.top) {
+                            addTopData(top);
+                        }
+                        if (top.processList) {
+                            config.data = top.processList;
+                            tableRender(config);
+                        }
+                    }
+                } catch (e) {
+                    return;
+                }
+            };
+            ws.onerror = function (ev) {
+                console.log(ev);
+                layer.msg("socket 异常");
+            }
+        } else {
+            ws.close();
+        }
     }
 
     //加载监控图
