--- a/modules/server/src/main/resources/templates/node/welcome.html
+++ b/modules/server/src/main/resources/templates/node/welcome.html
@@ -270,10 +270,14 @@
             },
             series: series
         };
-        if (!myEcharts) {
-            myEcharts = echarts.init(document.getElementById('echarts'));
+        try {
+            if (!myEcharts) {
+                myEcharts = echarts.init(document.getElementById('echarts'));
+            }
+            myEcharts.setOption(option);
+        } catch (e) {
+            console.error(e);
         }
-        myEcharts.setOption(option);
     }
 
     function loadProcessList() {
@@ -289,7 +293,6 @@
             }
         });
     }
-
 </script>
 
 </html>
